[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Enemies/TheWitch/Spells/WineBottle.gd" type="Script" id=1]
[ext_resource path="res://src/CollisionTemplates/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enemies/TheWitch/Spells/WinePour.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/TheWitch/Spells/WineSummon.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "Summon",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "Pour",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=13]
height = 12.5179

[sub_resource type="CapsuleShape2D" id=14]
height = 38.6066

[node name="WineBottle" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32.1864 )
frames = SubResource( 6 )
animation = "Summon"
frame = 3

[node name="HitBoxSmall" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="HitBoxSmall" index="0"]
position = Vector2( 0, -28.571 )
shape = SubResource( 13 )
disabled = true

[node name="HitBox2Full" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="HitBox2Full" index="0"]
position = Vector2( 0, -31.3682 )
shape = SubResource( 14 )
disabled = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]

[editable path="HitBoxSmall"]

[editable path="HitBox2Full"]
